[project]
name = "findata_api"
dynamic = [
  "authors",
  "description",
  "version",
  "dependencies",
  "optional-dependencies",
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Office/Business :: Financial",
]
license-files = ["LICEN[CS]E*"]
license = "Apache-2.0"

[project.urls]
Homepage = "https://github.com/davidel/findata_api"
Issues = "https://github.com/davidel/findata_api/issues"
Repository = "https://github.com/davidel/findata_api.git"

[build-system]
requires = ["setuptools >= 42.0.0"]
build-backend = "setuptools.build_meta"
